force-app/main/default/objects/My_Leads__c/My_Leads__c.object-meta.xml
<CustomObject>
    <label>My Leads</label>
    <nameField>
        <displayFormat>lead-{0}</displayFormat>
        <label>serialno:</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>My Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>