force-app/main/default/objects/My_Leads__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>State__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Agartala</fullName>
            </value>
            <value>
                <fullName>Ahmedabad</fullName>
            </value>
            <value>
                <fullName>Aizawl</fullName>
            </value>
            <value>
                <fullName>Bengaluru</fullName>
            </value>
            <value>
                <fullName>Bhubaneswar</fullName>
            </value>
            <value>
                <fullName>Chennai</fullName>
            </value>
            <value>
                <fullName>Dehradun</fullName>
            </value>
            <value>
                <fullName>Dimapur</fullName>
            </value>
            <value>
                <fullName>Gangtok</fullName>
            </value>
            <value>
                <fullName>Gurugram</fullName>
            </value>
            <value>
                <fullName>Guwahati</fullName>
            </value>
            <value>
                <fullName>Hyderabad</fullName>
            </value>
            <value>
                <fullName>Imphal</fullName>
            </value>
            <value>
                <fullName>Indore</fullName>
            </value>
            <value>
                <fullName>Itanagar</fullName>
            </value>
            <value>
                <fullName>Jaipur</fullName>
            </value>
            <value>
                <fullName>Kochi</fullName>
            </value>
            <value>
                <fullName>Kolkata</fullName>
            </value>
            <value>
                <fullName>Lucknow</fullName>
            </value>
            <value>
                <fullName>Ludhiana</fullName>
            </value>
            <value>
                <fullName>Mumbai</fullName>
            </value>
            <value>
                <fullName>Panaji</fullName>
            </value>
            <value>
                <fullName>Patna</fullName>
            </value>
            <value>
                <fullName>Raipur</fullName>
            </value>
            <value>
                <fullName>Ranchi</fullName>
            </value>
            <value>
                <fullName>Shillong</fullName>
            </value>
            <value>
                <fullName>Shimla</fullName>
            </value>
            <value>
                <fullName>Visakhapatnam</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>