force-app/main/default/objects/My_Leads__c/fields/Lead_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Name__c</fullName>
    <label>Lead Name</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>