force-app/main/default/objects/My_Leads__c/fields/primary_income__c.field-meta.xml
<CustomField>
    <fullName>primary_income__c</fullName>
    <label>primary income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>