force-app/main/default/objects/My_Leads__c/fields/Total_Income__c.field-meta.xml
<CustomField>
    <fullName>Total_Income__c</fullName>
    <formula>(primary_income__c  +  Secondary_Income__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>