force-app/main/default/objects/My_Leads__c/validationRules/Phone_Number_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Number_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>LEN(
    SUBSTITUTE(
        SUBSTITUTE(
            SUBSTITUTE(
                SUBSTITUTE(Phone_No__c, &quot;(&quot;, &quot;&quot;), 
            &quot;)&quot;, &quot;&quot;), 
        &quot;-&quot;, &quot;&quot;), 
    &quot; &quot;, &quot;&quot;)
) &lt;&gt; 10</errorConditionFormula>
    <errorDisplayField>Phone_No__c</errorDisplayField>
    <errorMessage>Invalid Input</errorMessage>
</ValidationRule>