force-app/main/default/objects/My_Leads__c/listViews/all_view.listView-meta.xml
<ListView>
    <fullName>all_view</fullName>
    <columns>NAME</columns>
    <columns>Lead_Name__c</columns>
    <columns>Phone_No__c</columns>
    <columns>Email_ID__c</columns>
    <columns>State__c</columns>
    <columns>City__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>job__c</columns>
    <filterScope>Everything</filterScope>
    <label>all view</label>
    <language>en_US</language>
</ListView>